fixed footer issue that caused images inside to overflow the container, changed content div (photo grid and about text) to 'section'

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ footer {
   flex: 1;
   max-height: 100%;
 }
-.footer img {
+footer img {
   max-width: 100%;
 }
 .square-footer-objects {
